--- a/RealCalculator/RealCalculator.csproj
+++ b/RealCalculator/RealCalculator.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{485E1110-5B48-4733-A768-71AC6DBA1784}</ProjectGuid>
+    <ProjectGuid>{E6667111-F169-4B6A-A08E-65666BDCEC01}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <RootNamespace>RealCalculator</RootNamespace>
+    <AssemblyName>RealCalculator</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
